game logic classes mostly complete, html complete, css styling mostly complete

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tic-Tac-Toe</title>
-  <link rel="stylesheet" href="./main.css">
-  <script src="./tic-tac-toe.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="./main.css">
+    <script type="module" src="./tic-tac-toe.js"></script>
+  </head>
 
-<body>
-  <!-- HTML structure for the UI: -->
-  <!-- Your code here -->
-</body>
+  <body>
+    <!-- HTML structure for the UI: -->
+    <!-- Your code here -->
+    <h1 id="winner-header">Winner: <span id="winner-span"></span></h1>
+    <ul id="game-board">
+    </ul>
+    <div id="buttons-div">
+      <button class="button" id="new-game" type="button">New Game</button>
+      <button class="button" id="give-up" type="button">Give Up</button>
+    </div>
+  </body>
 
 </html>
