computer player logic done, gamestate logic and ui handling completed

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="./main.css">
-    <script type="module" src="./tic-tac-toe.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script type="module" src="tic-tac-toe.js"></script>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <ul id="game-board">
     </ul>
     <div id="buttons-div">
-      <button class="button" id="new-game" type="button">New Game</button>
+      <button class="button disabled" id="new-game" type="button">New Game</button>
       <button class="button" id="give-up" type="button">Give Up</button>
     </div>
   </body>
